// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test on GitExpertApp should render GifExpertApp Correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`test on GitExpertApp should show a list categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category="dragon ball z"
      key="dragon ball z"
    />
  </ol>
</Fragment>
`;
